--- a/HTML/Inline css.html
+++ b/HTML/Inline css.html
@@ -4,10 +4,20 @@
        the inline css file colour blue
      </h1>
      <h style="font-size : 1000%;">the h element</h>
+    
+     <h1 style="font-size:150%;color:red"> 
+     This is inline html code 
+     inline inside of an element have an attribute <br>
+     normal declaration < a> < /a> <br>
+     inline css declaration < a style ="property:value"> < /a>
+     (inside style attribute)
+     </h1> <br>
+
+     <p style="color:purple"> This is yellow paragraph </p>
  </body>
 </html>
 <!--
-  inline css:-it is used to apply a style uniquely 
+  inline css:-it is used to apply a style uniquely
   for single HTML element
   inline css uses style attribute for html element
 -->
