--- a/HTML/frames.html
+++ b/HTML/frames.html
@@ -7,7 +7,7 @@
 	
    <frameset cols=100%,100%,100%>
 	<frame name="top" src="https://www.tutorialspoint.com/index.htm"/>
-	<frame name="main" src="https://www.youtube.com/results?search_query=master+songs+telugu"/>
+	<frame name="main" src="https://www.youtube.com"/>
 	<frame name="bottom" src="https://www.facebook.com/"/>
 	
    </frameset>
